# Valpondia_rust

./: Cargo.toml  LICENSE
resources/jsons/: Goblin.json
src/: errors.rs  main.rs  rng.rs
src/base/: mod.rs  nav.rs
src/data/: level.rs  level_manager.rs  map.rs  mod.rs
src/ecs/: errors.rs  game_state.rs  mod.rs
src/ecs/components/: mod.rs
src/ecs/systems/: ai_random_mov.rs  input.rs  mod.rs  movement.rs  update_view.rs  view_system.rs
src/ecs/systems/ai/: ai_random_mov.rs  mod.rs
src/ecs/systems/combat/: damage.rs  drop_after_death.rs  melee.rs  mod.rs  spawn_after_death.rs
src/ecs/systems/effects/: heal.rs  mod.rs  teleport.rs
src/ecs/systems/inventory/: equipment.rs  item_collecting.rs  item_dropping.rs  mod.rs
src/ecs/systems/map/: map_indexing.rs  mod.rs
src/ecs/systems/player/: input.rs  mod.rs  movement.rs
src/ecs/systems/spawn/: mod.rs
src/graphics/: entities.rs  map.rs  mod.rs  window.rs
src/graphics/gui/: equipment.rs  inventory.rs  mod.rs  targeting.rs
src/graphics/gui/menus/: main_menu.rs  map_testing.rs  mod.rs
src/levels/: errors.rs  level.rs  level_manager.rs  map.rs  mod.rs
src/map_generators/: cellular_automata.rs  errors.rs  mod.rs
src/maps/: corridor.rs  errors.rs  map.rs  mod.rs  rect.rs
src/maps/generators/: basic_dungeon.rs  cellular_automata.rs  common.rs  drunkard_walk.rs  mod.rs  test_map.rs
src/maps/generators/bsp/: interior.rs  mod.rs  tree.rs
src/spawner/: items.rs  mod.rs  monsters.rs  player.rs  spawn_tables.rs
src/spawner/items/: mod.rs  potions.rs  scrolls.rs
src/spawner/items/eq/: armors.rs  (+2 more)
(+6 files in other folders)
