[package]
name = "valpondia"
version = "0.1.0"
authors = ["zendurix <mich111222333@gmail.com>"]
edition = "2018"


[dependencies]
lazy_static = "1.4.0"

# graphics, window, game loop
rltk = "0.8.1"

# Entity component system
specs = "0.17.0"  
specs-derive = "0.4.1"

# errors
snafu = "0.6.10"

itertools = "0.10.1"

# (de)serialization
serde= { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"

# sound
kira = "0.5.3"
